ServletConfig vs ServletContext

--- a/CoronaVaccineApp/src/main/webapp/corona_vaccine.html
+++ b/CoronaVaccineApp/src/main/webapp/corona_vaccine.html
@@ -2,7 +2,7 @@
 
  <h1 style="color:red;text-align:center"> Corona Vaccine Elgibility Checking </h1>
  
-  <form action="coronaurl"  method="POST">
+  <form action="coronaurl"  method="GET">
       Person name     :: <input type="text" name="pname"> <br>
       Person address  :: <input type="text" name="paddrs"> <br>
       Person age         :: <input type="text" name="page"> <br> 
